--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-  <script type="text/javascript" src="dist/bundle.js" charset="utf-8"></script>
+  <div id="root"></div>
+  <script type="text/javascript" src="/bundle.js" charset="utf-8"></script>
 </body>
 
 </html>
